--- a/inputf.in
+++ b/inputf.in
@@ -1,5 +1,19 @@
-2
-6
-2  2  0  4  0  8
-10
-0  2  2  2  0  6  6  0  0  8
+3
+B20DCCN999
+Nguyen Van Nam
+D20CQCN04-B
+10.0
+9.0
+8.0
+B20DCAT001
+Le Van An
+D20CQAT02-B
+6.0
+6.0
+4.0
+B20DCCN111
+Nguyen Van Binh
+D20CQCN01-B
+9.0
+5.0
+6.0
