--- a/outputf.in
+++ b/outputf.in
@@ -1,2 +1,3 @@
-4 4 8 0 0 0 
-4 2 12 8 0 0 0 0 0 0 
+1 B20DCAT001 Le Van An D20CQAT02-B 6.0 6.0 4.0
+2 B20DCCN111 Nguyen Van Binh D20CQCN01-B 9.0 5.0 6.0
+3 B20DCCN999 Nguyen Van Nam D20CQCN04-B 10.0 9.0 8.0
