--- a/inputf.in
+++ b/inputf.in
@@ -1,19 +1,19 @@
 3
-B20DCCN999
-Nguyen Van Nam
-D20CQCN04-B
-10.0
-9.0
-8.0
-B20DCAT001
-Le Van An
-D20CQAT02-B
-6.0
-6.0
-4.0
-B20DCCN111
-Nguyen Van Binh
-D20CQCN01-B
-9.0
-5.0
-6.0
+Nguyen Van A
+Nam
+10/22/1982
+Mo Lao-Ha Dong-Ha Noi
+8333012345
+31/12/2013
+Ly Thi B
+Nu
+10/15/1988
+Mo Lao-Ha Dong-Ha Noi
+8333012346
+22/08/2011
+Hoang Thi C
+Nu
+04/02/1981
+Mo Lao-Ha Dong-Ha Noi
+8333012347
+22/08/2011
