--- a/outputf.in
+++ b/outputf.in
@@ -1,3 +1,11 @@
-00003 Hoang Thi C Nu 04/02/1981 Mo Lao-Ha Dong-Ha Noi 8333012347 22/08/2011
-00001 Nguyen Van A Nam 10/22/1982 Mo Lao-Ha Dong-Ha Noi 8333012345 31/12/2013
-00002 Ly Thi B Nu 10/15/1988 Mo Lao-Ha Dong-Ha Noi 8333012346 22/08/2011
+DANH SACH DOANH NGHIEP NHAN TU 30 DEN 50 SINH VIEN:
+SUN SUN* 50
+VIETTEL TAP DOAN VIEN THONG QUAN DOI VIETTEL 40
+
+doi
+huong
+lap
+phan
+thanh
+trinh
+tuong
