--- a/inputf.in
+++ b/inputf.in
@@ -1,19 +1,21 @@
-3
-Nguyen Van A
-Nam
-10/22/1982
-Mo Lao-Ha Dong-Ha Noi
-8333012345
-31/12/2013
-Ly Thi B
-Nu
-10/15/1988
-Mo Lao-Ha Dong-Ha Noi
-8333012346
-22/08/2011
-Hoang Thi C
-Nu
-04/02/1981
-Mo Lao-Ha Dong-Ha Noi
-8333012347
-22/08/2011
+4
+VIETTEL
+TAP DOAN VIEN THONG QUAN DOI VIETTEL
+40
+FSOFT
+CONG TY TNHH PHAN MEM FPT - FPT SOFTWARE
+300
+VNPT
+TAP DOAN BUU CHINH VIEN THONG VIET NAM
+200
+SUN
+SUN*
+50
+1
+30 50
+
+DANH SACH DOANH NGHIEP NHAN TU 30 DEN 50 SINH VIEN:
+FSOFT CONG TY TNHH PHAN MEM FPT - FPT SOFTWARE 300
+VNPT TAP DOAN BUU CHINH VIEN THONG VIET NAM 200
+SUN SUN* 50
+VIETTEL TAP DOAN VIEN THONG QUAN DOI VIETTEL 40
