--- a/DATA.in
+++ b/DATA.in
@@ -1,2 +1,7 @@
-lap trinh Huong doi tuong lap trinh Huong thanh phan
-
+3
+Nguyen Manh Son
+Cong nghe phan mem
+Vu Hoai Nam
+Khoa hoc may tinh
+Dang Minh Tuan
+An toan thong tin
