--- a/inputf.in
+++ b/inputf.in
@@ -1,21 +1,16 @@
-4
-VIETTEL
-TAP DOAN VIEN THONG QUAN DOI VIETTEL
-40
-FSOFT
-CONG TY TNHH PHAN MEM FPT - FPT SOFTWARE
-300
-VNPT
-TAP DOAN BUU CHINH VIEN THONG VIET NAM
-200
-SUN
-SUN*
-50
-1
-30 50
-
-DANH SACH DOANH NGHIEP NHAN TU 30 DEN 50 SINH VIEN:
-FSOFT CONG TY TNHH PHAN MEM FPT - FPT SOFTWARE 300
-VNPT TAP DOAN BUU CHINH VIEN THONG VIET NAM 200
-SUN SUN* 50
-VIETTEL TAP DOAN VIEN THONG QUAN DOI VIETTEL 40
+B16DCCN011
+Nguyen Trong Duc Anh
+D16CNPM1
+sv1@stu.ptit.edu.vn
+B15DCCN215
+To Ngoc Hieu
+D15CNPM3
+sv2@stu.ptit.edu.vn
+B15DCKT150
+Nguyen Ngoc Son
+D15CQKT02-B
+sv3@stu.ptit.edu.vn
+B15DCKT199
+Nguyen Trong Tung
+D15CQKT03-B
+sv4@stu.ptit.edu.vn
