--- a/outputf.in
+++ b/outputf.in
@@ -1,11 +1,4 @@
-DANH SACH DOANH NGHIEP NHAN TU 30 DEN 50 SINH VIEN:
-SUN SUN* 50
-VIETTEL TAP DOAN VIEN THONG QUAN DOI VIETTEL 40
-
-doi
-huong
-lap
-phan
-thanh
-trinh
-tuong
+B15DCCN215 To Ngoc Hieu D15CNPM3 sv2@stu.ptit.edu.vn
+B15DCKT150 Nguyen Ngoc Son D15CQKT02-B sv3@stu.ptit.edu.vn
+B15DCKT199 Nguyen Trong Tung D15CQKT03-B sv4@stu.ptit.edu.vn
+B16DCCN011 Nguyen Trong Duc Anh D16CNPM1 sv1@stu.ptit.edu.vn
